tests/baselines/reference/ES5For-of23.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of23.ts(3,5): error TS2304: Cannot find name 'console'.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of23.ts (1 errors) ====
    for (var x of [1, 2, 3]) {
        var _a = 0;
        console.log(x);
        ~~~~~~~
!!! error TS2304: Cannot find name 'console'.
    }